data/derived/comb/progs/unify/prog2377.ml.out
Characters 0-5:
  [9;9] [1;0;0;2];;
  ^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
